[package]
name = "nybbler"
version = "0.1.0"
edition = "2021"

[dependencies]
dialoguer = "0.10.4"
indicatif = "0.17.4"
console = "0.15.7"
rand = "0.8.5"
chrono = "0.4.26"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dirs = "5.0"
clap = { version = "4.4", features = ["derive"] }
